--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL = mongodb+srv://dduaa:joCH1x6KvrX5B5QC@cluster0.nomrcui.mongodb.net/chatroom2
-EXPRESS_SESSION_SECRET = "jasdf6KvrX5B5QCasdf",
-MONGO_DB_NAME = chatroom2
+DATABASE_URL = 
+EXPRESS_SESSION_SECRET = 
+MONGO_DB_NAME = 
